Quiz popup - number need spacing (bug 3562)

--- a/Zbang.Cloudents.Mvc4WebRole/Content/Quiz.less
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Quiz.less
@@ -1060,7 +1060,7 @@ body {
         height: 50px;
         line-height: 45px;
         border-radius: 50%;
-        font-size: 27px;
+        font-size: 18px;
         .boxSizing;
         padding-top: 3px;
         background: #fff;
